# data-sweeper-app

./: pyproject.toml  requirements.txt
src/data/: __init__.py  hello.py
