[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nihalkhann", email = "nihalghouri321@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
data = "data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
